java 21 upgrade, jvm virtual thread upgrade, yml format